--- a/app/src/main/res/drawable/btn_style.xml
+++ b/app/src/main/res/drawable/btn_style.xml
@@ -1,25 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_pressed="true" >
+        <shape>
+            <gradient android:startColor="#329703" android:endColor="#bb039305" android:angle="270" />
+            <stroke android:width="1dp" android:color="#bb039305" />
+            <corners android:radius="3dp" />
+            <padding android:left="10dp" android:top="10dp" android:right="10dp" android:bottom="10dp" />
+        </shape>
 
-    <item android:state_pressed="true">
-        <shape
-            android:shape="rectangle">
-            <corners android:topLeftRadius="10dp" />
-            <solid android:color="#f40101" />
+
+    </item>
+    <item android:state_focused="true" >
+        <shape>
+            <gradient android:startColor="#979797" android:endColor="#bbb1b0b0" android:angle="270" />
+            <stroke android:width="1dp" android:color="#bbb1b0b0" />
+            <corners android:radius="3dp" />
+            <padding android:left="10dp" android:top="10dp" android:right="10dp" android:bottom="10dp" />
         </shape>
 
     </item>
-
     <item>
-        <shape
-            android:shape="rectangle">
-            <corners android:topLeftRadius="10dp" />
-            <solid android:color="#f85656" />
+        <shape>
+
+            <gradient android:startColor="#414141" android:endColor="#bb1e1e1e" android:angle="270" />
+            <stroke android:width="1dp" android:color="#bb1e1e1e" />
+            <corners android:radius="3dp" />
+            <padding android:left="10dp" android:top="10dp" android:right="10dp" android:bottom="10dp" />
         </shape>
-
     </item>
-
-
-
-
 </selector>
