--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="mip.nz.stopwatch.MainActivity"
     android:orientation="vertical"
-    android:background="@color/bright_foreground_inverse_material_dark">
+    android:background="@drawable/bg">
 
     <LinearLayout
         android:orientation="vertical"
@@ -57,7 +57,10 @@
             android:layout_height="wrap_content"
             android:id="@+id/btnStart"
             android:layout_weight="1"
-            android:onClick="doStart" />
+            android:onClick="doStart"
+            android:background="@drawable/btn_style"
+            android:textColor="#ff9933"
+            android:textStyle="normal|bold" />
 
         <Button
             android:text="Pause"
@@ -66,7 +69,10 @@
             android:id="@+id/btnPause"
             android:layout_weight="1"
             android:onClick="doPause"
-            android:enabled="false" />
+            android:enabled="false"
+            android:background="@drawable/btn_style"
+            android:textColor="#ff9933"
+            android:textStyle="normal|bold" />
 
         <Button
             android:text="STOP"
@@ -75,7 +81,9 @@
             android:id="@+id/btnStop"
             android:layout_weight="1"
             android:onClick="doStop"
-            android:cursorVisible="true" />
+            android:cursorVisible="true"
+            android:background="@drawable/btn_style"
+            android:textColor="#ff9933" />
     </LinearLayout>
 
 </LinearLayout>
